[build] rev - adding widget

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -16,6 +16,7 @@ nav:
         - Checkbox: checkbox.md
         - Listbox: listbox.md
         - Textbox: textbox.md
+        - Widget: widget.md
 
     - 'Service':
         - Input: input.md
